// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correctly with value 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "paddingLeft": 18,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <View />
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[MockFunction]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      [
        {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 24,
          "padding": 0,
          "paddingHorizontal": 12,
        },
        undefined,
      ]
    }
    value="value"
  />
  <View
    accessibilityLabel="cancelSearch"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#D1D4DB",
        "borderRadius": 36,
        "justifyContent": "center",
        "padding": 6,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#5E6678",
          "fontFamily": "Neotis",
          "fontSize": 24,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Search render correctly without value 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "paddingLeft": 18,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 36,
      }
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      [
        {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 24,
          "padding": 0,
          "paddingHorizontal": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;
